k8s/apps/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: docker.io/jellyfin/jellyfin:10.11.11
          ports:
            - containerPort: 8096
              protocol: TCP
          resources:
            requests:
              memory: 2Gi
              cpu: 1
            limits:
              memory: 3Gi
              cpu: 2
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data/media
              name: media
              readOnly: true
      strategy:
        type: Recreate
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin
        - name: media
          nfs:
            server: magical-box.local
            path: /volume1/video
            readOnly: true
