k8s/apps/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: web
      port: 8096
      protocol: TCP
      targetPort: 8096
