k8s/apps/jellyfin/ingress-public.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-public
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: jellyfin.adtennant.dev
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  number: 8096
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - jellyfin.adtennant.dev
      secretName: jellyfin-tls
